--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,12 +6,12 @@ phases:
     commands:
       - "echo Build started on `date`"
       - "echo Building the Docker image..."
-      - "docker build -t Dockerfile ."	 
+      - "docker build -t machineinfodemo ."	 
   post_build:
     commands:
       - "echo Build completed on `date`"
       - "echo Pushing the Docker image..."
-      - "docker push abhishekmhadocker/machineinfodemo"
+      - "docker push abhishekmhadocker/machineinfodemo:v1.0"
   pre_build:
     commands:
       - "echo Logging in to Docker Hub..."
