--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,9 +11,9 @@ phases:
     commands:
       - "echo Build completed on `date`"
       - "echo Pushing the Docker image..."
-      - "docker push abhishekmhadocker/machineinfodemo:v1.0"
+      - "docker push aakankshidocker/machineinfodemo:v1.1.3"
   pre_build:
     commands:
       - "echo Logging in to Docker Hub..."
-      - "docker login --username=\"abhishekmhadocker\" --password=\"abhishek55@\""
+      - "docker login --username=\"aakankshidocker\" --password=\"docker\""
 version: 0.2
