--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
       - "echo Build started on `date`"
       - "echo Building the Docker image..."
       - "docker build -t machineinfodemo ."	 
+      - "docker tag machineinfodemo aakankshidocker/machineinfodemo:v1.1.3"
   post_build:
     commands:
       - "echo Build completed on `date`"
